2010-09-03  Jakub Jelinek  <jakub@redhat.com>

	PR debug/45500
	* gcc.target/i386/pr45500.c: New test.

2010-09-02  Ian Bolton  <ian.bolton@arm.com>

	Backport from mainline
	2010-08-19  Ian Bolton  <ian.bolton@arm.com>
	
	PR target/45070
	* gcc.c-torture/execute/pr45070.c: New.

	2010-08-19  Ian Bolton  <ian.bolton@arm.com>

	* g++.dg/pr44328.C: New test.
	
	2010-08-07  Marcus Shawcroft <marcus.shawcroft@arm.com>

	* lib/target-supports.exp: (check_effective_target_sync_int_long):
	Add arm*-*-linux-gnueabi.
	(check_effective_target_sync_char_short): Likewise.
	
2010-09-01  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/45458
	* g++.dg/tree-prof/partition2.C: New test.

2010-08-31  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.dg/nested-func-8.c: New test.

2010-08-30  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/45423
	* gcc.dg/gomp/atomic-12.c: New test.
	* gcc.dg/gomp/atomic-13.c: New test.
	* gcc.dg/gomp/atomic-14.c: New test.
	* g++.dg/gomp/atomic-11.C: New test.
	* g++.dg/gomp/atomic-12.C: New test.
	* g++.dg/gomp/atomic-13.C: New test.
	* g++.dg/gomp/atomic-14.C: New test.

2010-08-30  Jakub Jelinek  <jakub@redhat.com>

	Backport from mainline
	2010-07-27  Jakub Jelinek  <jakub@redhat.com>

	PR c/45079
	* gcc.dg/pr45079.c: New test.

2010-08-29  Jason Merrill  <jason@redhat.com>

	PR c++/44991
	* g++.dg/parse/defarg15.C: New.

2010-08-30  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2010-08-25  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/45393
	* g++.dg/torture/pr45393.C: New testcase.

2010-08-25  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/44858
	* gcc.c-torture/execute/pr44858.c: New test.

	PR rtl-optimization/45400
	* g++.dg/other/i386-8.C: New test.

2010-08-19  Jason Merrill  <jason@redhat.com>

	* g++.dg/init/value8.C: New.

2010-08-20  Jakub Jelinek  <jakub@redhat.com>

	PR fortran/45344
	Backport from mainline
	2010-05-14  Jakub Jelinek  <jakub@redhat.com>
